feat: carossel, skeleton loading, fix menu header e mini card event

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
   <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon">
+
+  <meta name="description" content="Seu Rôle oferece uma plataforma fácil e eficiente para venda de ingressos e gerenciamento de eventos. Descubra como facilitar a administração dos seus ingressos e maximize suas vendas." />
+  <meta name="keywords" content="venda de ingressos, gerenciamento de eventos, ingressos online, organização de eventos, plataforma de ingressos" />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Seu Rôle" />
+  <meta property="og:title" content="Seu Rôle - Venda e Gerenciamento de Ingressos" />
+  <meta property="og:description" content="Seu Rôle oferece uma plataforma fácil e eficiente para venda de ingressos e gerenciamento de eventos. Descubra como facilitar a administração dos seus ingressos e maximize suas vendas." />
+  <meta property="og:type" content="website" />
   <title>Seu Rôle</title>
 </head>
 
